--- a/package.json
+++ b/package.json
@@ -4,11 +4,19 @@
   "description": "An FCC Backend Challenge",
   "main": "index.js",
   "scripts": {
-    "start": "node index.js"
+    "start": "node index.js",
+    "dev": "nodemon index.js",
+    "test": "jest",
+    "lint": "eslint .",
+    "build": "tsc",
+    "prestart": "npm run build",
+    "poststart": "echo 'Application started!'",
+    "stop": "node index.stop.js"
   },
   "dependencies": {
-    "express": "^4.12.4",
-    "cors": "^2.8.0"
+    "cors": "^2.8.0",
+    "dotenv": "^16.4.5",
+    "express": "^4.12.4"
   },
   "repository": {
     "type": "git",
